--- a/config/default/gain_manager/gain_manager.yaml
+++ b/config/default/gain_manager/gain_manager.yaml
@@ -16,6 +16,7 @@ estimator_types: [
   "OPTFLOW",
   "OTHER",
   "ALOAM",
+  "TOWER",
 ]
 
 gains: [
@@ -31,6 +32,7 @@ gain_management:
     BRICKFLOW: ["default"]
     HECTOR: ["default"]
     ALOAM: ["default"]
+    TOWER: ["default"]
     T265: ["default"]
     BRICK: ["default"]
     VIO: ["default"]
@@ -49,6 +51,7 @@ gain_management:
     BRICKFLOW: "default"
     HECTOR: "default"
     ALOAM: "default"
+    TOWER: "default"
     T265: "default"
     BRICK: "default"
     VIO: "default"
