--- a/config/uav/t650/gain_manager/gain_manager.yaml
+++ b/config/uav/t650/gain_manager/gain_manager.yaml
@@ -23,6 +23,7 @@ gain_management:
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
     ALOAM: ["supersoft"]
+    TOWER: ["supersoft", "soft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -41,4 +42,5 @@ gain_management:
     OPTFLOW: "supersoft"
     HECTOR: "supersoft"
     ALOAM: "supersoft"
+    TOWER: "supersoft"
     OTHER: "supersoft"
