--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -21,6 +21,7 @@ gain_management:
     OPTFLOW: ["supersoft"]
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
+    TOWER: ["supersoft", "soft"]
     ALOAM: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
@@ -41,3 +42,4 @@ gain_management:
     OTHER: "supersoft"
     HECTOR: "supersoft"
     ALOAM: "supersoft"
+    TOWER: "supersoft"
