--- a/config/default/uav_manager.yaml
+++ b/config/default/uav_manager.yaml
@@ -1,3 +1,5 @@
+version: "0.0.3.0"
+
 null_tracker: "NullTracker"
 partial_landing_controller: "PartialLandingController" # has an exception for allowing takeoff
 
