ControlManager: refactored and fixed the distrubances

--- a/config/simulation/f550/gain_manager/gains.yaml
+++ b/config/simulation/f550/gain_manager/gains.yaml
@@ -24,7 +24,7 @@ supersoft:
       kq: 10.0
       kw: 8.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -54,7 +54,7 @@ soft:
       kq: 10.0
       kw: 8.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -84,6 +84,6 @@ tight:
       kq: 10.0
       kw: 8.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
