--- a/config/default/gain_manager/gains.yaml
+++ b/config/default/gain_manager/gains.yaml
@@ -24,6 +24,6 @@ default:
       kq: 5.0
       kw: 0.5
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 3.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
