--- a/config/simulation/eaglemk2/gain_manager/gains.yaml
+++ b/config/simulation/eaglemk2/gain_manager/gains.yaml
@@ -21,10 +21,10 @@ supersoft:
     ka: 1.0
 
     attitude:
-      kq: 8.0
-      kw: 1.0
+      kq: 4.0
+      kw: 6.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 10.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -51,10 +51,10 @@ soft:
     ka: 1.0
 
     attitude:
-      kq: 8.0
-      kw: 1.0
+      kq: 4.0
+      kw: 6.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 10.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -81,9 +81,9 @@ tight:
     ka: 1.0
 
     attitude:
-      kq: 8.0
-      kw: 1.0
+      kq: 4.0
+      kw: 6.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 10.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
