--- a/config/simulation/m650/gain_manager/gains.yaml
+++ b/config/simulation/m650/gain_manager/gains.yaml
@@ -24,6 +24,6 @@ default:
       kq: 6.0
       kw: 0.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 8.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
