--- a/config/uav/naki/gain_manager/gains.yaml
+++ b/config/uav/naki/gain_manager/gains.yaml
@@ -24,7 +24,7 @@ supersoft:
       kq: 20.0
       kw: 5.0
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 5.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -54,6 +54,6 @@ soft:
       kq: 1.0
       kw: 0.1
 
-  weight_estimator:
+  mass_estimator:
     km: 1.0
     km_lim: 5.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
