--- a/config/uav/t650/gain_manager/gains.yaml
+++ b/config/uav/t650/gain_manager/gains.yaml
@@ -24,7 +24,7 @@ supersoft:
       kq: 8.0
       kw: 0.1
 
-  weight_estimator:
+  mass_estimator:
     km: 0.5
     km_lim: 6.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -54,7 +54,7 @@ soft:
       kq: 8.0
       kw: 0.1
 
-  weight_estimator:
+  mass_estimator:
     km: 0.5
     km_lim: 6.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
 
@@ -84,6 +84,6 @@ tight:
       kq: 8.0
       kw: 0.1
 
-  weight_estimator:
+  mass_estimator:
     km: 0.5
     km_lim: 6.0 # [kg, at least 1/2 of the UAVs mass to allow landing detection]
