more refactoring in UavManager

--- a/config/default/uav_manager.yaml
+++ b/config/default/uav_manager.yaml
@@ -19,12 +19,12 @@ takeoff:
   rate: 10 # [Hz]
 
   during_takeoff:
+    controller: "MpcControllerr"
     tracker: "LandoffTracker"
-    controller: "MpcController"
 
   after_takeoff:
-    tracker: "MpcTracker"
     controller: "MpcController"
+    tracker: "MpcTracker"
 
     pirouette: false
 
