--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -157,7 +157,7 @@ joystick:
 
     # tracker and controller used to control the drone using a joystick
     tracker: "JoyTracker"
-    controller: "So3Controller"
+    controller: "MpcController"
 
     # what tracker and controller should be activate when
     # switching back from joystick control?
