--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package format="2">
 
-  <name>mrs_uav_manager</name>
+  <name>mrs_uav_managers</name>
   <version>0.0.5</version>
-  <description>The mrs_uav_manager package</description>
+  <description>The mrs_uav_managers package</description>
 
   <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
   <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
@@ -27,7 +27,7 @@
 
   <export>
     <nodelet plugin="${prefix}/plugins.xml" />
-    <mrs_uav_manager plugin="${prefix}/null_tracker.xml" />
+    <mrs_uav_managers plugin="${prefix}/null_tracker.xml" />
   </export>
 
 </package>
