disabled parachute by default, enabled only for eagle in simu

--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -81,7 +81,7 @@ safety:
 
   parachute:
 
-    enabled: true
+    enabled: false
 
 # Those are normally overridden by the ConstraintManager.
 default_constraints:
