--- a/config/simulation/eaglemk2/control_manager.yaml
+++ b/config/simulation/eaglemk2/control_manager.yaml
@@ -21,3 +21,7 @@ controllers : [
 safety:
 
   min_thrust_null_tracker: 0.15 # [] minimum thrust when not flying
+
+  parachute:
+
+    enabled: true
