updated parachute settings

--- a/config/simulation/t650/control_manager.yaml
+++ b/config/simulation/t650/control_manager.yaml
@@ -24,3 +24,7 @@ safety:
 
   # when the active tracker returns empty command
   tracker_error_action: "ehover" # {eland, ehover}
+
+  parachute:
+
+    enabled: true
