--- a/config/simulation/f550/control_manager.yaml
+++ b/config/simulation/f550/control_manager.yaml
@@ -11,7 +11,7 @@ trackers : [
 
 # - list of names of dynamically loaded controllers
 controllers : [
-  "So3Controller",
+  "Se3Controller",
   "MpcController",
   "NsfController",
   "FailsafeController",
