--- a/config/simulation/m600/controllers.yaml
+++ b/config/simulation/m600/controllers.yaml
@@ -1,6 +1,6 @@
-So3Controller:
-  address: "mrs_uav_controllers/So3Controller"
-  namespace: "so3_controller"
+Se3Controller:
+  address: "mrs_uav_controllers/Se3Controller"
+  namespace: "se3_controller"
   eland_threshold: 0.0 # [m], position error triggering eland
   failsafe_threshold: 0.0 # [m], position error triggering failsafe land
   odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
