--- a/config/uav/eaglemk2/uav_manager.yaml
+++ b/config/uav/eaglemk2/uav_manager.yaml
@@ -5,7 +5,7 @@ takeoff:
     tracker: "LandoffTracker"
 
   after_takeoff:
-    controller: "So3Controller"
+    controller: "Se3Controller"
     tracker: "MpcTracker"
 
   takeoff_height: 2.5
