--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -47,6 +47,11 @@ safety:
   # after not receiving odometry for more than this, the failsafe landing will trigger
   odometry_max_missing_time: 0.1 # [s]
 
+  # trigger eland when the odometry corrections are too unreliable
+  # should be false when using custom odometry source without available innovation values
+  odometry_innovation_eland:
+    enabled: true
+
   # emergency landing (still feedback)
   eland:
 
