--- a/config/default/gain_manager/gain_manager.yaml
+++ b/config/default/gain_manager/gain_manager.yaml
@@ -18,6 +18,7 @@ estimator_types: [
   "OPTFLOW",
   "OTHER",
   "ALOAM",
+  "ALOAMGARM",
   "TOWER",
 ]
 
@@ -34,6 +35,7 @@ gain_management:
     BRICKFLOW: ["default"]
     HECTOR: ["default"]
     ALOAM: ["default"]
+    ALOAMGARM: ["default"]
     TOWER: ["default"]
     T265: ["default"]
     BRICK: ["default"]
@@ -53,6 +55,7 @@ gain_management:
     BRICKFLOW: "default"
     HECTOR: "default"
     ALOAM: "default"
+    ALOAMGARM: "default"
     TOWER: "default"
     T265: "default"
     BRICK: "default"
