--- a/config/simulation/f450/gain_manager/gain_manager.yaml
+++ b/config/simulation/f450/gain_manager/gain_manager.yaml
@@ -13,6 +13,7 @@ gain_management:
     BRICKFLOW: ["soft"]
     HECTOR: ["soft"]
     ALOAM: ["soft"]
+    ALOAMGARM: ["soft"]
     T265: ["soft"]
     BRICK: ["supersoft"]
     VIO: ["supersoft"]
@@ -32,6 +33,7 @@ gain_management:
     BRICKFLOW: "soft"
     HECTOR: "soft"
     ALOAM: "soft"
+    ALOAMGARM: "soft"
     T265: "soft"
     BRICK: "supersoft"
     VIO: "supersoft"
