--- a/config/uav/t650/gain_manager/gain_manager.yaml
+++ b/config/uav/t650/gain_manager/gain_manager.yaml
@@ -23,6 +23,7 @@ gain_management:
     OTHER: ["supersoft"]
     HECTOR: ["supersoft"]
     ALOAM: ["supersoft"]
+    ALOAMGARM: ["supersoft"]
     TOWER: ["supersoft", "soft"]
 
   # those gains will be used automatically when a localization mode switches
@@ -42,5 +43,6 @@ gain_management:
     OPTFLOW: "supersoft"
     HECTOR: "supersoft"
     ALOAM: "supersoft"
+    ALOAMGARM: "supersoft"
     TOWER: "supersoft"
     OTHER: "supersoft"
