--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,11 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-18.04
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-20.04]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,8 +30,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install
-        run: ./.ci/ci_before_install.sh
+        run: ./.ci/install.sh
 
       # Runs a set of commands using the runners shell
       - name: Build
-        run: ./.ci/ci_test_build.sh
+        run: ./.ci/build.sh
