--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ on:
 jobs:
 
   cancel:
+
     name: Cancel Previous Runs
     runs-on: ubuntu-latest
     steps:
@@ -29,11 +30,12 @@ jobs:
 
   # This workflow contains a single job called "build"
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
+
+    steps:
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
