--- a/config/default/trackers.yaml
+++ b/config/default/trackers.yaml
@@ -16,6 +16,9 @@ MatlabTracker:
 SpeedTracker:
   address: "mrs_uav_trackers/SpeedTracker"
 
+FlipTracker:
+  address: "mrs_uav_trackers/FlipTracker"
+
 CsvTracker:
   address: "mrs_uav_trackers/CsvTracker"
 
