updated gain and constraint manager yamls

--- a/config/default/constraint_manager/constraint_manager.yaml
+++ b/config/default/constraint_manager/constraint_manager.yaml
@@ -40,6 +40,7 @@ constraint_management:
     HECTOR: ["slow"]
     ALOAM: ["slow"]
     ALOAMGARM: ["slow"]
+    ALOAMREP: ["slow"]
     TOWER: ["slow"]
     T265: ["slow"]
     BRICK: ["slow"]
@@ -60,6 +61,7 @@ constraint_management:
     HECTOR: "slow"
     ALOAM: "slow"
     ALOAMGARM: "slow"
+    ALOAMREP: "slow"
     TOWER: "slow"
     T265: "slow"
     BRICK: "slow"
