--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -3,6 +3,7 @@ gains: [
   "soft",
 ]
 
+
 gain_management:
 
   # list of allowed gains per odometry mode
@@ -10,6 +11,10 @@ gain_management:
     ICP: ["supersoft", "soft"]
     VSLAM: ["supersoft", "soft"]
     BRICKFLOW: ["supersoft", "soft"]
+    HECTOR: ["supersoft"]
+    ALOAM: ["supersoft"]
+    ALOAMGARM: ["supersoft"]
+    ALOAMREP: ["soft"]
     BRICK: ["supersoft", "soft"]
     T265: ["supersoft", "soft"]
     OBJECT: ["supersoft"]
@@ -19,11 +24,8 @@ gain_management:
     OPTFLOWGPS: ["supersoft"]
     GPS: ["supersoft", "soft"]
     OPTFLOW: ["supersoft"]
-    OTHER: ["supersoft"]
-    HECTOR: ["supersoft"]
     TOWER: ["supersoft", "soft"]
-    ALOAM: ["supersoft"]
-    ALOAMGARM: ["supersoft"]
+    OTHER: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -31,6 +33,10 @@ gain_management:
     ICP: "supersoft"
     VSLAM: "supersoft"
     BRICKFLOW: "supersoft"
+    HECTOR: "supersoft"
+    ALOAM: "supersoft"
+    ALOAMGARM: "supersoft"
+    ALOAMREP: "soft"
     BRICK: "supersoft"
     T265: "supersoft"
     OBJECT: "supersoft"
@@ -40,8 +46,5 @@ gain_management:
     OPTFLOWGPS: "supersoft"
     GPS: "soft"
     OPTFLOW: "supersoft"
-    OTHER: "supersoft"
-    HECTOR: "supersoft"
-    ALOAM: "supersoft"
-    ALOAMGARM: "supersoft"
     TOWER: "supersoft"
+    OTHER: "supersoft"
