fix fallback gains for ALOAMREP and x500 uav type

--- a/config/uav/x500/gain_manager/gain_manager.yaml
+++ b/config/uav/x500/gain_manager/gain_manager.yaml
@@ -37,7 +37,7 @@ gain_management:
     HECTOR: "supersoft"
     ALOAM: "supersoft"
     ALOAMGARM: "supersoft"
-    ALOAMREP: ["supersoft"]
+    ALOAMREP: "supersoft"
     BRICK: "supersoft"
     T265: "supersoft"
     OBJECT: "supersoft"
