disabled trajectory snapping to safety area (by default)

--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -142,6 +142,10 @@ default_constraints:
 
   tilt: deg(60)
 
+trajectory_tracking:
+
+  snap_to_safety_area: false
+
 obstacle_bumper:
 
   switch_tracker: true
